<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="package_header">Packages:</string>
    <string name="app_name">KO Resume</string>
    <string name="about">About KOResume</string>
    <string name="addPackage">Add Package</string>
    <string name="promptPackageHint">Enter a title</string>
    <string name="promptPackageText">Name of package?</string>
    <string name="promptTitle">Prompt</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alertTitle">Alert</string>
    <string name="packageContents">Cover Letter:</string>
    <string name="packageViewResume">View Resume</string>
    <string name="editInfo">Edit Information</string>
    <string name="saveInfo">Save Information</string>
    <string name="resumeContents">Resume:</string>
    <string name="resumeViewJobs">View Jobs</string>
    <string name="resumeViewEducation">View Education &amp; Certifications</string>
    <string name="homePhone">Home</string>
    <string name="mobilePhone">Mobile</string>
    <string name="nameIsRequired">Name is required</string>
    <string name="resumeNotSaved">Please correct and try Saving again.</string>
    <string name="resumeDefaultName">Please name your resume</string>
    <string name="resumeNameLbl">Resume Name:</string>
    <string name="resumeStreetLbl">Street:</string>
    <string name="cityLbl">City, St, Zip:</string>
    <string name="resumeHomePhoneLbl">Home Phone:</string>
    <string name="resumeMobilePhoneLbl">Mobile Phone:</string>
    <string name="resumeResponsibilitiesLbl">Responsibilities:</string>
    <string name="jobsHeader">Jobs:</string>
    <string name="jobContents">Job:</string>
    <string name="jobNameLbl">Company:</string>
    <string name="jobTitleLbl">Title:</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="jobResponsibilities">Responsibilities:</string>
    <string name="cityStateLbl">City, St</string>
    <string name="jobAccomplishments">View Accomplishments</string>
    <string name="accomplishmentsHeader">Accomplishments:</string>
    <string name="educationHeader">Education and Certifications</string>
    <string name="aboutText">Copyright 2011, Kevin G O\'Mara</string>
    <string name="deletePackage">Delete Package</string>
    <string name="addJob">Add Job</string>
    <string name="deleteJob">Delete Job</string>
    <string name="editAccomplishment">Edit Accomplishment</string>
    <string name="deleteAccomplishment">Delete Accomplishment</string>
    <string name="accNameLbl">Accomplishment Name:</string>
    <string name="accSummary">Accomplishment:</string>
    <string name="save">Save</string>
    <string name="addInfo">Add Information</string>
    <string name="eduNameLbl">Institution/Certification Name</string>
    <string name="eduTitle">Degree/Certification Title</string>
    <string name="editEducation">Edit Education/Certification</string>
    <string name="deleteEducation">Delete Education/Certification</string>
    <string name="eduEarnedDate">Date Awarded</string>
    <string name="deleteResume">Delete Resume</string>
    <string name="defaultJobName">Enter Job Name</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="jobEverythingWillGo">This will delete the Job and all its Accomplishments!</string>
    <string name="packageEverythingWillGo">This will delete the Resume, Cover Letter, Jobs, Education and all Accomplishments!</string>
    <string name="jobNameHint">Enter Job Name</string>
</resources>
