<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:fillViewport="true"	>
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/background" 
	    >
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/eduMetaData"
			android:background="@drawable/group_style"
			android:layout_marginTop="10dip"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
			<TextView
				android:id="@+id/eduNameLbl"
				android:text="@string/eduNameLbl"
				android:textColor="#000000"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall" 
				/>				
			<EditText
				android:id="@+id/eduName"
				android:layout_below="@id/eduNameLbl"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:minWidth="44dip"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceLarge"
				/>
			<TextView
				android:id="@+id/eduTitleLbl"
				android:text="@string/eduTitle"
				android:textColor="#000000"
				android:layout_below="@id/eduName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall" 
				/>				
			<EditText
				android:id="@+id/eduTitle"
				android:layout_below="@id/eduTitleLbl"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:minWidth="44dip"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				/>
			<TextView
				android:id="@+id/eduEarnedDateLbl"
				android:textColor="#000000"
				android:layout_below="@id/eduTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="44dip"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceMedium" 
				/>							
			<Button
				android:id="@+id/eduEarnedDateBtn"
				android:layout_below="@id/eduTitle"
				android:layout_toRightOf="@id/eduEarnedDateLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/eduEarnedDate"
				/>
			<Button
				android:id="@+id/cancelEducationBtn"
				android:layout_below="@id/eduEarnedDateBtn"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip" 
				android:layout_marginTop="5dip"
				android:text="@string/cancel"
				android:onClick="onCancelBtn"
				/>
			<Button
				android:id="@+id/saveEducationBtn"
				android:layout_below="@id/cancelEducationBtn"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip" 
				android:layout_marginTop="5dip"
				android:text="@string/save"
				android:onClick="onSaveBtn"
				/>				
		</RelativeLayout>
	</LinearLayout>
</ScrollView>