<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" 
    >
    <TextView
    	android:id="@+id/resumeTextView"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/resumeContents"
		android:paddingLeft="5dp"
		android:gravity="left"
		/>
	<EditText
		android:id="@+id/resumeSummaryText"
		android:background="@drawable/group_style"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip" 
		android:paddingLeft="5dip"
		android:paddingRight="5dip"
		android:textAppearance="?android:attr/textAppearanceSmall"
		/>
    <RelativeLayout 
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
		<Button
			android:id="@+id/resumeJobsBtn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip" 
			android:layout_marginTop="5dip"
			android:text="@string/resumeViewJobs"
			android:onClick="onJobsBtn"
			/>
		<Button
			android:id="@+id/resumeEducationBtn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip" 
			android:layout_marginTop="5dip"
			android:text="@string/resumeViewEducation"
			android:onClick="onEducationBtn"
			/>
	</RelativeLayout>
</LinearLayout>
