<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"	>
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/background" 
	    >
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/jobMetaData"
			android:background="@drawable/group_style"
			android:layout_marginTop="10dip"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip" 
			android:layout_width="wrap_content"
			android:layout_weight="1.0"
			android:layout_height="wrap_content" >
			<TextView
				android:id="@+id/jobNameLbl"
				android:text="@string/jobNameLbl"
				android:textColor="#000000"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall" 
				/>				
			<EditText
				android:id="@+id/jobName"
				android:layout_below="@id/jobNameLbl"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceLarge"
				/>
			<TextView
				android:id="@+id/jobCityLbl"
				android:text="@string/cityStateLbl"
				android:textColor="#000000"
				android:layout_below="@id/jobName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall" 
				/>				
			<EditText
				android:id="@+id/jobCity"
				android:layout_below="@id/jobCityLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				/>
			<EditText
				android:id="@+id/jobState"
				android:layout_below="@id/jobCityLbl"
				android:layout_toRightOf="@id/jobCity"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:minWidth="44dip"
				android:gravity="center"
				android:textAppearance="?android:attr/textAppearanceSmall"
				/>
			<TextView
				android:id="@+id/jobTitleLbl"
				android:text="@string/jobTitleLbl"
				android:textColor="#000000"
				android:layout_below="@id/jobCity"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall" 
				/>				
			<EditText
				android:id="@+id/jobTitle"
				android:layout_below="@id/jobTitleLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				/>
			<TextView
				android:id="@+id/jobStartDate"
				android:text=""
				android:textColor="#000000"
				android:layout_below="@id/jobTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minHeight="46dip"
				android:gravity="center_vertical"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall" 
				/>				
		    <Button 
		    	android:id="@+id/pickStartDate"
		    	android:layout_toRightOf="@id/jobStartDate"
		    	android:layout_below="@id/jobTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/startDate"/>
			<TextView
				android:id="@+id/jobEndDate"
				android:text=""
				android:textColor="#000000"
				android:layout_below="@id/jobStartDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minHeight="48dip"
				android:gravity="center_vertical"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall" 
				/>				
		    <Button 
		    	android:id="@+id/pickEndDate"
		    	android:layout_toRightOf="@id/jobEndDate"
				android:layout_below="@id/pickStartDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/endDate"/>
			<TextView
				android:id="@+id/jobSummaryLbl"
				android:text="@string/jobResponsibilities"
				android:textColor="#000000"
				android:layout_below="@id/jobEndDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall" 
				/>				
			<EditText
				android:id="@+id/jobSummary"
				android:layout_below="@id/jobSummaryLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				/>
		</RelativeLayout>
		<Button
			android:id="@+id/accomplishmentsBtn"
			android:layout_below="@id/jobSummary"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip" 
			android:layout_marginTop="5dip"
			android:text="@string/jobAccomplishments"
			android:onClick="onAccomplishmentsBtn"
			/>
	</LinearLayout>
</ScrollView>